# protobuf_example

./: CMakeLists.txt  LICENSE  readme.md
demo/: CMakeLists.txt  PBHelloDemo.cpp
include/: PBHello.h
proto/: CMakeLists.txt  another_message.proto  hello_message.proto
src/: PBHello.cpp
